# meta-shampoo

./: pyproject.toml
