[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-shampoo"
version = "0.1.0"
requires-python = ">= 3.8"
dependencies = [
  "torch>=2.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["distributed_shampoo*"]
exclude = []

[tool.setuptools.package-data]
distributed_shampoo = [
    "LICENSE",
    "README.md",
]
